kubernetes/vanilla/app1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 1323
      - path: /action
        pathType: Exact
        backend:
          service:
            name: app1
            port:
              number: 1323
